# tree-sitter-wdl

./: .gitignore  CHANGES.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  tree-sitter-test.yml
benches/: parser.rs
bindings/c/: tree-sitter-wdl.h  tree-sitter-wdl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_wdl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterWdlTests/: TreeSitterWdlTests.swift
resources/test/: escape.wdl  strings.wdl
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: escape.txt  strings.txt
