[package]
name = "tree-sitter-wdl-1"
description = "WDL 1.x grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "wdl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/broadinstitute/tree-sitter-wdl"
edition = "2021"
license = "MIT"
build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
serde_json = { version = "1.0.135", optional = true } 
thiserror = "2.0.11"
tree-sitter = "0.24.7"

[build-dependencies]
cc = "1.0"

[features]
json = ["dep:serde_json"]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parser"
harness = false